# YouTube-video-finder

./: .gitignore  .pre-commit-config.yaml  Deploy as a Google Cloud Function.md  LICENSE  README.md  __main__.py  config.yaml  main.py  pyproject.toml  requirements.txt  video_finder.py
.github/workflows/: publish.yml
scripts/: deploy_gcp_function.sh
test/: test_video_finder.py
